# zoomcamp_mlops

./: .gitignore  README.rst  pyproject.toml
tests/: test_zoomcamp_mlops.py
zoomcamp_mlops/: zoomcamp_HW_1.ipynb
