[tool.poetry]
name = "zoomcamp_mlops"
version = "0.1.0"
description = ""
authors = ["Rumpa Choudhury <itsrumpa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
shap = "^0.40.0"
jupyterlab = "^3.4.2"
pyarrow = "^8.0.0"
fastparquet = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
